Sat Jun 18 11:12:13 2011  Tanaka Akira  <akr@fsij.org>

	* common.mk: update dependencies.

Sat Jun 18 11:09:03 2011  Tanaka Akira  <akr@fsij.org>

	* io.c: supress warnings.

Sat Jun 18 10:22:39 2011  Tanaka Akira  <akr@fsij.org>

	* internal.h: declare more internal functions.

	* iseq.h (rb_method_get_iseq): declared.

	* compile.c, eval.c, eval_error.c, iseq.c, parse.y, proc.c, range.c,
	  ruby.c, time.c, util.c, vm.c: don't declare internal functions.

	* eval.c, parse.y, thread_pthread.c: non-existing function declarations
	  removed.

Sat Jun 18 08:12:54 2011  Tanaka Akira  <akr@fsij.org>

	* common.mk: dependencies updated.

	* tool/update-deps: new file to assist update dependencies in
	  common.mk.

Sat Jun 18 07:27:27 2011  Tanaka Akira  <akr@fsij.org>

	* internal.h: declare internal functions here.

	* node.h: declare NODE dependent internal functions here.

	* iseq.h: declare rb_iseq_t dependent internal functions here.

	* vm_core.h: declare rb_thread_t dependent internal functions here.

	* bignum.c, class.c, compile.c, complex.c, cont.c, dir.c, encoding.c,
	  enumerator.c, error.c, eval.c, file.c, gc.c, hash.c, inits.c, io.c,
	  iseq.c, load.c, marshal.c, math.c, numeric.c, object.c, parse.y,
	  proc.c, process.c, range.c, rational.c, re.c, ruby.c, string.c,
	  thread.c, time.c, transcode.c, variable.c, vm.c,
	  tool/compile_prelude.rb: don't declare internal functions declared
	  in above headers.  include above headers if required.

	  Note that rb_thread_mark() was declared as
	  void rb_thread_mark(rb_thread_t *th) in cont.c but defined as
	  void rb_thread_mark(void *ptr) in vm.c.  Now it is declared as
	  the later in internal.h.

Sat Jun 18 02:36:00 2011  Kenta Murata  <mrkn@mrkn.jp>

	* ext/bigdecimal/bigdecimal.c (VpNewRbClass): fix type of the 2nd
	  argument.

	* ext/bigdecimal/bigdecimal.h: ditto.

Sat Jun 18 02:30:00 2011  Kenta Murata  <mrkn@mrkn.jp>

	* ext/bigdecimal/bigdecimal.c (BigMath_s_exp): move BigMath.exp from