@@ -1,3 +1,7 @@
+Sat Jun 18 12:05:08 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* include/ruby/backward/classext.h: for evil gems.  fixed #4803
+
 Sat Jun 18 11:12:13 2011  Tanaka Akira  <akr@fsij.org>
 
 	* common.mk: update dependencies.
